--- a/pokemonMachine.csproj
+++ b/pokemonMachine.csproj
@@ -113,5 +113,23 @@
   <ItemGroup>
     <None Include="Resources\hold_on.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\cat.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\diglet.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\jiggly.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\pidgey.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\psyduck.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\rat.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
