--- a/pokemonMachine.csproj
+++ b/pokemonMachine.csproj
@@ -131,5 +131,17 @@
   <ItemGroup>
     <None Include="Resources\rat.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\score.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\score1.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\winline.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\red_arrow.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
